refactor: remove dummy tests and improve code readability in main application